--- a/package.json
+++ b/package.json
@@ -11,34 +11,44 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.26.5",
+    "@babel/cli": "7.26.4",
     "@babel/core": "7.26.5",
     "@babel/preset-env": "7.26.0",
-    "jest": "^25.1.0",
-    "nodemon": "^2.0.2"
+    "jest": "^25.1.0"
   },
   "nodemonConfig": {
     "exec": "npm run dev",
-    "watch": ["server/*", "public/*"],
-    "ignore": ["**/__tests__/**", "*.test.js", "*.spec.js"]
+    "watch": [
+      "server/*",
+      "public/*"
+    ],
+    "ignore": [
+      "**/__tests__/**",
+      "*.test.js",
+      "*.spec.js"
+    ]
   },
   "babel": {
-    "presets": ["@babel/preset-env"]
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "jest": {
     "testEnvironment": "node"
   },
   "scripts": {
-    "clean": "rm -rf dist-server",
-    "transpile": "node ./node_modules/@babel/cli/bin/babel.js ./server --out-dir dist-server",
+    "start": "npm run prod",
     "build": "npm run clean && npm run transpile",
     "server": "node ./dist-server/bin/www",
     "dev": "NODE_ENV=development npm run server",
     "prod": "NODE_ENV=production npm run server",
-    "start": "npm run prod",
+    "transpile": "babel ./server --out-dir dist-server",
+    "clean": "rm -rf dist-server",
+    "watch:dev": "nodemon",
     "test": "jest"
   }
 }
