--- a/package.json
+++ b/package.json
@@ -16,26 +16,17 @@
   },
   "devDependencies": {
     "@babel/cli": "7.26.4",
-    "@babel/core": "7.26.5",
+    "@babel/core": "7.26.0",
     "@babel/preset-env": "7.26.0",
     "jest": "^25.1.0"
   },
   "nodemonConfig": {
     "exec": "npm run dev",
-    "watch": [
-      "server/*",
-      "public/*"
-    ],
-    "ignore": [
-      "**/__tests__/**",
-      "*.test.js",
-      "*.spec.js"
-    ]
+    "watch": ["server/*", "public/*"],
+    "ignore": ["**/__tests__/**", "*.test.js", "*.spec.js"]
   },
   "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
+    "presets": ["@babel/preset-env"]
   },
   "jest": {
     "testEnvironment": "node"
